--- a/package.json
+++ b/package.json
@@ -1,21 +1,19 @@
 {
-  "name": "vanilla-app-template",
+  "name": "kyrcov",
   "private": true,
   "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build --base=/vanilla-app-template/",
+    "build": "vite build",
     "preview": "vite preview"
   },
   "devDependencies": {
+    "vite": "^5.4.6",
     "glob": "^11.0.0",
     "postcss": "^8.4.41",
-    "postcss-sort-media-queries": "^5.2.0",
-    "vite": "^5.4.6"
+    "postcss-sort-media-queries": "^5.2.0"
   },
-  "author": "Alexander Repeta <alexander.repeta@gmail.com>",
-  "license": "ISC",
   "dependencies": {
     "vite-plugin-full-reload": "^1.2.0",
     "vite-plugin-html-inject": "^1.1.2"
