--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build --base=/kyrcov/",
+    "build": "npx vite build --base=/kyrcov/",
     "preview": "vite preview"
   },
   "devDependencies": {
@@ -15,11 +15,11 @@
     "sass-embedded": "^1.97.3",
     "vite": "^5.4.6"
   },
-  "author": "Ernest Sosnovskyi <e.sosnovskyi@student.neoversity.com.ua>",
-  "license": "ISC",
   "dependencies": {
     "modern-normalize": "^3.0.1",
     "vite-plugin-full-reload": "^1.2.0",
     "vite-plugin-html-inject": "^1.1.2"
-  }
+  },
+  "author": "Schastlyvtsev Nazar <n.zaharii@student.neoversity.com.ua>>",
+  "license": "ISC"
 }
