--- a/package.json
+++ b/package.json
@@ -3,12 +3,10 @@
   "private": true,
   "version": "1.0.0",
   "type": "module",
-   "scripts": {
-  "dev": "vite",
-  "build": "npm exec vite build -- --base=/kyrcov.github.io/",
-  "preview": "vite preview"
-    }
-  
+  "scripts": {
+    "dev": "vite",
+    "build": "npm exec vite build -- --base=/kyrcov.github.io/",
+    "preview": "vite preview"
   },
   "devDependencies": {
     "glob": "^11.0.0",
@@ -22,6 +20,6 @@
     "vite-plugin-full-reload": "^1.2.0",
     "vite-plugin-html-inject": "^1.1.2"
   },
-  "author": "Schastlyvtsev Nazar <n.zaharii@student.neoversity.com.ua>>",
+  "author": "Schastlyvtsev Nazar <n.zaharii@student.neoversity.com.ua>",
   "license": "ISC"
 }
